apostila/atividades/poupadev-api/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: poupadev
  name: poupadev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poupadev
  strategy: {}
  template:
    metadata:
      labels:
        app: poupadev
    spec:
      containers:
      - image: ikauzak/poupadev-api:v1.0.1
        name: poupadev-api
        ports:
          - containerPort: 80
            protocol: TCP
