apostila/atividades/poupadev-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: poupadev
  name: poupadev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: poupadev
  type: NodePort
